--- a/src/main/resources/assets/sign_up/lang/en_us.json
+++ b/src/main/resources/assets/sign_up/lang/en_us.json
@@ -14,7 +14,8 @@
   "gui.sign_up.minimap.refresh.every": "Every Frame",
   "gui.sign_up.minimap.refresh.another": "Every 2 Frames",
   "gui.sign_up.minimap.refresh.tick": "Every Tick",
-  "gui.sign_up.minimap.refresh.tick20": "Every 20 Ticks"
+  "gui.sign_up.minimap.refresh.tick20": "Every 20 Ticks",
+  "gui.sign_up.map.teleport": "%s\n[Double click to teleport]",
 
   "hud.sign_up.minimap.hide": "Minimap is hided by: %s"
 }
